# diplom_testing_student_system

./: README.md  alembic.ini  docker-compose.yaml  main.py  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 8fa42250a6a9_alter_token_id.py  bbc7771e0b18_create_models.py
app/: config.py  database.py  models.py  schemas.py  security.py  utils.py
app/dependencies/: auth.py
app/routers/: auth.py  question.py  result.py  tests.py
app/scripts/: create_super_user.py
app/services/: auth.py
app/views/: auth.py  base.py
frontend/: index.html  package-lock.json
frontend/src/: axiosInstance.js  router.js
frontend/src/api/: tests.js
frontend/src/assets/: main.css
frontend/src/components/: CreateTestForm.vue  LoginForm.vue  TestList.vue
frontend/src/stores/: authStore.js  tests.js
frontend/src/views/: Home.vue  Login.vue  TestDetail.vue
