[project]
name = "student-testing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.1",
    "passlib>=1.7.4",
    "psycopg>=3.2.7",
    "psycopg-binary>=3.2.7",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.2.0",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
]
